# Tigress_protection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  solve-md5.py  solve-vm-multiple-br.py  solve-vm.py  solve-vms.sh  templates.py
deobfuscated_binaries/: run.c  run.cpp  run_md5.c  sample1-virt-add-opaque-to-vpc-false.deobfuscated  sample1-virt-add-opaque-to-vpc-true.deobfuscated  sample1-virt-anti-branch-analysis-branchFuns.deobfuscated  sample1-virt-anti-branch-analysis-goto2call.deobfuscated  sample1-virt-anti-branch-analysis-goto2push.deobfuscated  sample1-virt-bogus-functions-0.deobfuscated  sample1-virt-bogus-functions-1.deobfuscated  sample1-virt-bogus-functions-2.deobfuscated  sample1-virt-bogus-functions-3.deobfuscated  sample1-virt-bogus-loop-iterations-0.deobfuscated  sample1-virt-bogus-loop-iterations-1.deobfuscated  sample1-virt-bogus-loop-iterations-2.deobfuscated  sample1-virt-bogus-loop-iterations-3.deobfuscated  sample1-virt-dispatcher-binary.deobfuscated  sample1-virt-dispatcher-call.deobfuscated  sample1-virt-dispatcher-direct.deobfuscated  sample1-virt-dispatcher-ifnest.deobfuscated  sample1-virt-dispatcher-indirect.deobfuscated  sample1-virt-dispatcher-interpolation.deobfuscated  sample1-virt-dispatcher-linear.deobfuscated  sample1-virt-dispatcher-switch.deobfuscated  sample1-virt-duplicate-opcodes-0.deobfuscated  sample1-virt-duplicate-opcodes-1.deobfuscated  sample1-virt-duplicate-opcodes-2.deobfuscated  sample1-virt-duplicate-opcodes-3.deobfuscated  sample1-virt-encode-byte-array-false.deobfuscated  sample1-virt-encode-byte-array-true.deobfuscated  sample1-virt-max-merge-lenght-0.deobfuscated  sample1-virt-max-merge-lenght-10.deobfuscated  sample1-virt-max-merge-lenght-20.deobfuscated  sample1-virt-max-merge-lenght-30.deobfuscated  sample1-virt-nested-vm-1.deobfuscated  sample1-virt-nested-vm-2.deobfuscated  sample1-virt-nested-vm-3.deobfuscated  sample1-virt-obfuscate-decode-byte-array-false.deobfuscated  sample1-virt-obfuscate-decode-byte-array-true.deobfuscated  sample1-virt-operand-registers.deobfuscated  (+945 more)
llvm_expressions/: README.md  sample1-virt-add-opaque-to-vpc-false.O2.ll  sample1-virt-add-opaque-to-vpc-true.O2.ll  sample1-virt-anti-branch-analysis-branchFuns.O2.ll  sample1-virt-anti-branch-analysis-goto2call.O2.ll  sample1-virt-anti-branch-analysis-goto2push.O2.ll  sample1-virt-bogus-functions-0.O2.ll  sample1-virt-bogus-functions-1.O2.ll  sample1-virt-bogus-functions-2.O2.ll  sample1-virt-bogus-functions-3.O2.ll  sample1-virt-bogus-loop-iterations-0.O2.ll  sample1-virt-bogus-loop-iterations-1.O2.ll  sample1-virt-bogus-loop-iterations-2.O2.ll  sample1-virt-bogus-loop-iterations-3.O2.ll  sample1-virt-dispatcher-binary.O2.ll  sample1-virt-dispatcher-call.O2.ll  sample1-virt-dispatcher-direct.O2.ll  sample1-virt-dispatcher-ifnest.O2.ll  sample1-virt-dispatcher-indirect.O2.ll  (+1105 more)
metrics/: md5.data  (+23 more)
virtualization/: CMakeLists.txt
virtualization/add-opaque-to-vpc/: CMakeLists.txt
virtualization/add-opaque-to-vpc/false/: CMakeLists.txt
virtualization/add-opaque-to-vpc/true/: CMakeLists.txt
virtualization/anti-branch-analysis/: CMakeLists.txt
virtualization/anti-branch-analysis/branchFuns/: CMakeLists.txt
virtualization/anti-branch-analysis/goto2call/: CMakeLists.txt
virtualization/anti-branch-analysis/goto2push/: CMakeLists.txt
virtualization/anti-dse/: CMakeLists.txt
virtualization/bogus-functions/0/: CMakeLists.txt
virtualization/bogus-functions/1/: CMakeLists.txt
virtualization/bogus-functions/2/: CMakeLists.txt
virtualization/bogus-functions/3/: CMakeLists.txt
virtualization/bogus-loop-iterations/: CMakeLists.txt
virtualization/bogus-loop-iterations/0/: CMakeLists.txt
virtualization/bogus-loop-iterations/1/: CMakeLists.txt
virtualization/bogus-loop-iterations/2/: CMakeLists.txt
virtualization/bogus-loop-iterations/3/: CMakeLists.txt
virtualization/dispatchers/: CMakeLists.txt
virtualization/dispatchers/binary/: CMakeLists.txt
virtualization/dispatchers/call/: CMakeLists.txt
virtualization/dispatchers/direct/: CMakeLists.txt
virtualization/dispatchers/ifnest/: CMakeLists.txt
virtualization/dispatchers/indirect/: CMakeLists.txt
virtualization/dispatchers/interpolation/: CMakeLists.txt
virtualization/dispatchers/linear/: CMakeLists.txt
virtualization/dispatchers/switch/: CMakeLists.txt
virtualization/duplicate-opcodes/: CMakeLists.txt
virtualization/duplicate-opcodes/0/: CMakeLists.txt
virtualization/duplicate-opcodes/1/: CMakeLists.txt
virtualization/duplicate-opcodes/2/: CMakeLists.txt
virtualization/duplicate-opcodes/3/: CMakeLists.txt
virtualization/encode-byte-array/false/: CMakeLists.txt
virtualization/encode-byte-array/true/: CMakeLists.txt
virtualization/max-merge-length/: CMakeLists.txt
virtualization/max-merge-length/0/: CMakeLists.txt
virtualization/max-merge-length/10/: CMakeLists.txt
virtualization/max-merge-length/20/: CMakeLists.txt
virtualization/max-merge-length/30/: CMakeLists.txt
virtualization/nested-vm/: CMakeLists.txt
virtualization/nested-vm/1/: CMakeLists.txt
virtualization/nested-vm/2/: CMakeLists.txt
virtualization/nested-vm/3/: CMakeLists.txt
virtualization/obfuscate-decode-byte-array/: CMakeLists.txt
virtualization/obfuscate-decode-byte-array/false/: CMakeLists.txt
virtualization/obfuscate-decode-byte-array/true/: CMakeLists.txt
virtualization/operands/: CMakeLists.txt
virtualization/operands/registers/: CMakeLists.txt
virtualization/operands/stack/: CMakeLists.txt
virtualization/random-opcodes/: CMakeLists.txt
virtualization/random-opcodes/false/: CMakeLists.txt
virtualization/random-opcodes/true/: CMakeLists.txt
virtualization/super-operators-ratio/: CMakeLists.txt
virtualization/super-operators-ratio/0.0/: CMakeLists.txt
virtualization/super-operators-ratio/0.2/: CMakeLists.txt
virtualization/super-operators-ratio/0.4/: CMakeLists.txt
virtualization/super-operators-ratio/0.6/: CMakeLists.txt
virtualization/super-operators-ratio/0.8/: CMakeLists.txt
virtualization/super-operators-ratio/1.0/: CMakeLists.txt
(+792 files in other folders)
