set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --Seed=1 --Transform=InitEntropy --Functions=main --Transform=InitOpaque --Functions=SECRET --Transform=Virtualize --Functions=SECRET")

add_subdirectory(add-opaque-to-vpc)
add_subdirectory(anti-branch-analysis)
#add_subdirectory(anti-dse)
add_subdirectory(bogus-functions)
add_subdirectory(bogus-loop-iterations)
add_subdirectory(dispatchers)
add_subdirectory(duplicate-opcodes)
add_subdirectory(encode-byte-array)
add_subdirectory(max-merge-length)
add_subdirectory(nested-vm)
add_subdirectory(obfuscate-decode-byte-array)
add_subdirectory(operands)
add_subdirectory(random-opcodes)
add_subdirectory(super-operators-ratio)
