set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --Seed=0 --Inputs=\"+1:int:42,-1:length:1?10\"")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --Transform=InitImplicitFlow --Functions=SECRET")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --Transform=InitEntropy")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --Transform=InitOpaque --Functions=main --InitOpaqueCount=2")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --InitOpaqueStructs=list,array,input,env")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --Transform=AddOpaque --Functions=SECRET --AddOpaqueKinds=question")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --AddOpaqueSplitKinds=inside")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --AddOpaqueCount=10")

message("-- Virtualization anti-dse binary: enabled")
foreach(TIGRESS_SAMPLE ${TIGRESS_SAMPLES})
    list(GET ${TIGRESS_SAMPLE} 0 TNAME)
    list(GET ${TIGRESS_SAMPLE} 1 TFILE)
    add_executable(${TNAME}-anti-dse ${TFILE})
endforeach(TIGRESS_SAMPLE)
